--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       <!-- Ionicons -->
       <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
       <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <title>React App</title>
+    <title>Countried | Made by Kyle</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
